--- a/styles/layout.css
+++ b/styles/layout.css
@@ -196,3 +196,22 @@ br {
 		min-width: 400px;
 	}
 }
+
+textarea._TEMPLATE,
+textarea._COMPILED,
+textarea._CONTEXT,
+textarea._OUTPUT {
+	width: 100%;
+}
+
+div._CODE_TAB {
+	display: inline-block;
+	color: #666;
+	padding: 2px 6px;
+	border: 1px solid #333;
+	border-bottom: 0;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	margin-bottom: -1px;
+	z-index: 1;
+}
