Added CodeMirror textareas

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -35,16 +35,22 @@ p._ABOUT {
 	margin: 0;
 }
 
-textarea {
-	background: #000;
+textarea, .CodeMirror {
+	background: #000!important;
 	color: #fff;
-	border: 1px solid #333;
-}
-
-pre,
-textarea {
+	border: 1px solid #333!important;
+	height: 360px;
+	font-size: 14px!important;
 	font: 14px Menlo, "Lucida Console", "Courier New", monospace;
-	padding: 8px;
-	outline: 0;
 }
 
+textarea {
+	outline: 0;
+	padding: 4px 6px;
+}
+
+.CodeMirror-gutter {
+	background: #181818;
+	border-right: 1px solid #222;
+	color: #999;
+}
