--- a/styles/layout.css
+++ b/styles/layout.css
@@ -39,11 +39,6 @@ body {
 	font-size: 0.8em;
 }
 
-#_LOGO b {
-	font-weight: bold;
-	color: #c70;
-}
-
 .home #_LOGO {
 	font-size: 2.4em;
 }
@@ -59,6 +54,15 @@ body {
 .page #_BODY {
 	background: #eee;
 	color: #000;
+}
+
+#_FEATURES {
+	background: #222 url(/gears.gif);
+	color: #fff;
+	border: 0 solid #333;
+	border-width: 0.2em 0;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 
 #_USE {
