--- a/styles/layout.css
+++ b/styles/layout.css
@@ -205,25 +205,6 @@ br {
 	}
 }
 
-textarea._TEMPLATE,
-textarea._COMPILED,
-textarea._CONTEXT,
-textarea._OUTPUT {
-	width: 100%;
-}
-
-div._CODE_TAB {
-	display: inline-block;
-	color: #666;
-	padding: 2px 6px;
-	border: 1px solid #333;
-	border-bottom: 0;
-	border-top-left-radius: 8px;
-	border-top-right-radius: 8px;
-	margin-bottom: -1px;
-	z-index: 1;
-}
-
 a._PROJECT {
 	display: block;
 	padding: 5px;
@@ -251,4 +232,8 @@ a._PROJECT span {
 	color: #666;
 	margin-left: 0.5em;
 	font-size: 0.8em;
+}
+
+._HIDDEN {
+	display: none;
 }
