--- a/styles/layout.css
+++ b/styles/layout.css
@@ -188,8 +188,8 @@ a._PROJECT {
 }
 
 a._PROJECT:hover {
-	background: #113;
-	border-color: #336;
+	background: #125;
+	border-color: #35a;
 }
 
 a._PROJECT svg {
