--- a/styles/code.css
+++ b/styles/code.css
@@ -15,6 +15,7 @@ b._CODE_TAB {
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
 	margin: 0 2px 0 0;
+	font-size: 0.8em;
 	cursor: pointer;
 }
 
@@ -31,8 +32,8 @@ textarea,
 	color: #fff;
 	border: 1px solid #333!important;
 	height: 400px;
-	font-size: 14px!important;
-	font: 14px Menlo, "Lucida Console", "Courier New", monospace;
+	font-size: 12px!important;
+	font: 12px Menlo, "Lucida Console", "Courier New", monospace;
 	transition: border-color 0.5s;
 }
 
@@ -55,4 +56,7 @@ textarea {
 
 div.cm-s-blackboard div.CodeMirror-cursor {
 	border-left: 2px solid #fff!important;
+	text-indent: 20px;
+	overflow: hidden;
 }
+
