--- a/styles/layout.css
+++ b/styles/layout.css
@@ -6,9 +6,9 @@
 
 body {
 	border-top: 1em solid #e50;
-	font: normal 12px Arial;
+	font: normal 16px Arial;
 	background: #000;
-	color: #ddd;
+	color: #fff;
 	height: 100%;
 	min-width: 980px;
 }
@@ -86,12 +86,20 @@ body {
 
 #_FOOT {
 	color: #555;
-	text-align: right;
 	font-size: 20px;
 }
 
 #_FOOT b {
-	color: #777;
+	color: #666;
+}
+
+#_FOOT a {
+	color: #888;
+}
+
+a#_LIGHTERIO {
+	background: url(/lighter.svg) no-repeat;
+	padding-left: 1em;
 }
 
 li {
@@ -147,6 +155,8 @@ br {
 
 ._RIGHT { float: right; }
 
+._ALIGN_RIGHT { text-align: right; }
+
 #_FORK {
 	display: block;
 	position: absolute;
@@ -154,9 +164,9 @@ br {
 	right: 0;
 }
 
-#_FORK img{
-	width: 150px;
-	height: 150px;
+#_FORK svg{
+	width: 100px;
+	height: 100px;
 	border: 0;
 }
 
@@ -178,7 +188,7 @@ br {
 
 a._PROJECT {
 	display: block;
-	padding: 5px;
+	padding: 2px;
 	border: 1px solid #222;
 	border-radius: 20px;
 	background: #111;
