--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,7 +6,7 @@
 
 body {
   border-top: 0.4em solid #e50;
-  font-family: Arial;
+  font-family: Lato, Arial, sans-serif;
   background: #ccc;
   color: #000;
   height: 100%;
@@ -31,6 +30,7 @@ body._SCROLLED {
   filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000,direction=45);
 }
 
+#_LOGO img,
 #_LOGO svg {
   display: inline-block;
   width: 60px;
@@ -92,9 +92,10 @@ body._SCROLLED {
   color: #349;
 }
 
-a#_LIGHTERIO {
-  background: url(/lighter.svg) no-repeat;
-  padding-left: 1em;
+#_LIGHTERIO img {
+  vertical-align: top;
+  width: 1.3em;
+  height: 1.3em;
 }
 
 li {
@@ -181,6 +182,7 @@ a._PROJECT:hover b._IDEA {
   opacity: 1;
 }
 
+a._PROJECT img,
 a._PROJECT svg {
   vertical-align: middle;
   width: 3em;
