--- a/styles/layout.css
+++ b/styles/layout.css
@@ -153,7 +153,7 @@ br {
   right: 0;
 }
 
-#_FORK svg {
+#_FORK img {
   width: 6em;
   height: 6em;
 }
@@ -194,7 +194,12 @@ a._PROJECT span {
   margin-left: 0.5em;
   font-size: 0.8em;
   font-weight: 300;
-  opacity: 0.5;
+  opacity: 0.6;
+}
+
+a._PROJECT i {
+  font-style: normal;
+  font-weight: 600;
 }
 
 b._READY,
