--- a/styles/home.css
+++ b/styles/home.css
@@ -1,16 +1,16 @@
-#_FEATURES ._BOX {
+#_features ._box {
   background: #fff;
   border-radius: 1em;
   margin: 0.2em;
   padding: 0.1em;
 }
 
-#_FEATURES ._BOX4 {
+#_features ._box4 {
   padding: 0.4em 0.8em;
   line-height: 1.5;
 }
 
-a._PROJECT {
+a._project {
   position: relative;
   display: block;
   padding: 0.2em;
@@ -21,28 +21,26 @@ a._PROJECT {
   font-size: 1.2em;
   color: #fff;
   margin: -0.4em -0.3em;
-  font-family: Lato, Arial, sans-serif;
-  font-weight: 400;
 }
 
-a._PROJECT:hover {
+a._project:hover {
   color: #fff;
   background: #248;
 }
 
-a._PROJECT:hover b {
+a._project:hover b {
   opacity: 1;
 }
 
-a._PROJECT img,
-a._PROJECT svg {
+a._project img,
+a._project svg {
   vertical-align: middle;
   width: 3em;
   height: 3em;
   margin: 0 0.5em 0 1.5em;
 }
 
-a._PROJECT u {
+a._project u {
   margin-left: 0.2em;
   font-size: 0.9em;
   font-weight: 300;
@@ -50,9 +48,9 @@ a._PROJECT u {
   opacity: 0.6;
 }
 
-b._READY,
-b._UNDOCUMENTED,
-b._IDEA {
+b._ready,
+b._undocumented,
+b._idea {
   position: absolute;
   width: 1em;
   left: 0;
@@ -64,14 +62,14 @@ b._IDEA {
   opacity: 0.5;
 }
 
-b._READY {
+b._ready {
   background: #0a0;
 }
 
-b._UNDOCUMENTED {
+b._undocumented {
   background: #d00;
 }
 
-b._IDEA {
+b._idea {
   background: #80d;
 }
