--- a/styles/docent.css
+++ b/styles/docent.css
@@ -1,14 +1,14 @@
-#_DOCENT_DOC,
-#_DOCENT_NAV {
+#_docentDoc,
+#_docentNav {
   float: left;
   padding: 1em;
 }
 
-#_DOCENT_DOC {
+#_docentDoc {
   width: 80%;
 }
 
-#_DOCENT_FIX {
+#_docentFix {
   top: 0;
   position: absolute;
   width: 100%;
@@ -16,23 +16,19 @@
   margin-top: 6.4em;
 }
 
-#_DOCENT_FIX._FIXED {
+#_docentFix._fixed {
   position: fixed;
   margin-top: 1.4em;
 }
 
-#_DOCENT_NAV {
+#_docentNav {
   float: right;
   width: 20%;
   font-size: 0.8em;
   font-weight: 400;
 }
 
-#_DOCENT_NAV a {
+#_docentNav a {
   display: block;
   padding: 0.2em;
-}
-
-#_DOCENT_NAV input {
-  margin-bottom: 1em;
 }
