--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,6 @@ body, html {
 
 body {
   border-top: 0.4em solid #e50;
-  font-family: Open Sans, Arial, sans-serif;
-  font-weight: 400;
   color: #000;
   height: 100%;
 }
@@ -27,11 +25,13 @@ a:hover {
 }
 
 h1, h2, h3, h4 {
-  font-family: Lato, Arial, sans-serif;
-  font-weight: 400;
   color: #048;
 }
 
-._HIDDEN {
+._hidden {
   display: none;
+}
+
+img {
+  border: 0;
 }
