--- a/styles/layout.css
+++ b/styles/layout.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 1px;
   top: 0;
-  background: #e50;
+  background: #e52;
 }
 
 #_scrolled>#_head {
@@ -48,10 +48,9 @@
 
 h1 {
   margin: 0 0 0 -0.3em;
-  font-size: 1.8em;
 }
 
-#_logo img {
+#_logo l-icon {
   display: inline-block;
   width: 2em;
   height: 2em;
@@ -73,31 +72,29 @@ h1 {
 
 #_features,
 #_badges {
-  background: #fc0;
+  background: #fc3;
   border-bottom: 1px solid #999;
-  font-size: 1.2em;
 }
 
 #_badges,
-#_badges a {
-  line-height: 0.9;
+#_badges a,
+#_badges>._panel {
+  line-height: 1;
 }
 
 #_badges {
   background: #abc;
   border-bottom: 1px solid #999;
-  font-size: 0.1em;
 }
 
 #_badges>._panel {
   text-align: right;
-  padding: 0.2em 0.8em;
+  padding: 0 0.8em;
 }
 
 #_badges a {
-  vertical-align: top;
   display: inline-block;
-  padding: 0.2em 0;
+  padding: 0.2em 0 0.1em 0;
 }
 
 #_badges img {
@@ -117,10 +114,10 @@ h1 {
   color: #349;
 }
 
-#_lighterio img {
+#_foot svg {
   vertical-align: top;
-  width: 1.3em;
-  height: 1.3em;
+  width: 1.125em;
+  height: 1.125em;
 }
 
 ._set, ._section {
